Update description to be less long

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
 title: Jamie's Blog
-description: This blog is a place for me to write up interesting articles about things, mostly programming related, but probably also quite wide ranging. I am in definite need of somewhere to paste and share ideas that have no other home so they’ll all end up here.
+description: A place for my articles that don't fit anywhere else!
