--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/minimal@v0.2.0
 title: Jamie Read
-description: This blog is a place for me to write up interesting articles about things, mostly programming related, but probably also quite wide ranging. I am in definite need of somewhere to paste and share ideas that have no other home so they’ll all end up here.
+description: DevOps Engineer and Open Source author
