--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pages-themes/minimal@v0.2.0
 title: Jamie Read
 description: DevOps Engineer and Open Source author
+author: Jamie Read
