--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ remote_theme: pages-themes/minimal@v0.2.0
 title: Jamie Read
 description: DevOps Engineer and Open Source author
 author: Jamie Read
+logo: /assets/profile.jpg
