--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ title: Jamie Read
 description: DevOps Engineer and Open Source author
 author: Jamie Read
 logo: /assets/profile.jpg
+socials:
+  linkedin: https://www.linkedin.com/in/jamieread/
+  twitter: https://twitter.com/jamoyjamie
