--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ author: Jamie Read
 logo: /assets/profile.jpg
 socials:
   linkedin: https://www.linkedin.com/in/jamieread/
-  twitter: https://twitter.com/jamoyjamie
+  dev.to: https://dev.to/jamoyjamie
