--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 title: Jamie Read
-description: DevOps Engineer and Open Source author
+description: DevOps Engineer
 author: Jamie Read
 logo: /assets/profile.jpg
 socials:
